--- a/net-im/psi/Makefile
+++ b/net-im/psi/Makefile
@@ -6,8 +6,7 @@
 #
 
 PORTNAME=	psi
-PORTVERSION=	0.9
-PORTREVISION=	1
+PORTVERSION=	0.9.1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
@@ -15,15 +14,15 @@ MASTER_SITE_SUBDIR=	${PORTNAME}
 MAINTAINER=	jonc@chen.org.nz
 COMMENT=	A Qt-based Jabber client
 
-LIB_DEPENDS+=	qssl.1:${PORTSDIR}/devel/qssl
-
 HAS_CONFIGURE=	yes
 USE_X_PREFIX=	yes
 USE_BZIP2=	yes
+USE_GMAKE=	yes
 USE_QT_VER=	3
 CONFIGURE_ENV=	QTDIR=${X11BASE} \
 		QMAKESPEC=${LOCALBASE}/share/qt/mkspecs/freebsd-g++
-CONFIGURE_ARGS=	-p ${PREFIX}
-MAKE_ARGS+=	QTDIR=${X11BASE}
+CONFIGURE_ARGS=	--prefix=${PREFIX}
+MAKE_ARGS+=	QTDIR=${X11BASE} \
+		QMAKESPEC=${LOCALBASE}/share/qt/mkspecs/freebsd-g++
 
 .include <bsd.port.mk>
