--- a/sysutils/gdesklets-sysinfo/Makefile
+++ b/sysutils/gdesklets-sysinfo/Makefile
@@ -6,8 +6,7 @@
 #
 
 PORTNAME=	sysinfo
-PORTVERSION=	0.23
-PORTREVISION=	1
+PORTVERSION=	0.25
 CATEGORIES=	sysutils gnome
 MASTER_SITES=	http://gdesklets.gnomedesktop.org/files/
 PKGNAMEPREFIX=	gdesklets-
@@ -20,26 +19,25 @@ RUN_DEPENDS=	${X11BASE}/libdata/pkgconfig/gdesklets-core.pc:${PORTSDIR}/deskutil
 
 USE_BZIP2=	yes
 USE_X_PREFIX=	yes
+USE_PYTHON=	yes
 NAME=		SysInfo
 DATADIR=	${PREFIX}/share/gnome
 LANG=		de es fr pt sq sr sr@Latn sv
 PKGMESSAGE=	${WRKDIR}/pkg-message
+WRKSRC=		${WRKDIR}/${NAME}
 
 do-build:
-	@${WRKSRC}/Install_${NAME}_Sensor.bin --nomsg ${WRKSRC}
-	@${PATCH} -d ${WRKDIR} -sp0 < ${PATCHDIR}/postbuild-patch-__init__.py
+	@${WRKDIR}/Install_${NAME}_Sensor.bin --nomsg ${WRKSRC}
+	@${PATCH} -d ${WRKSRC} -sp0 < ${PATCHDIR}/postbuild-patch-__init__.py
 	@${FIND} ${WRKSRC} -name '*.orig' -delete
 	@${CAT} pkg-message | ${SED} -e 's|%%PREFIX%%|${PREFIX}|' > ${PKGMESSAGE}
 
 do-install:
 	@${MKDIR} ${DATADIR}/gdesklets/Displays/${NAME}/gfx
-	@${MKDIR} ${DATADIR}/gdesklets/Sensors/${NAME}/gfx
+	@${MKDIR} ${DATADIR}/gdesklets/Sensors/${NAME}
 	@${INSTALL_DATA} ${WRKSRC}/*.display ${DATADIR}/gdesklets/Displays/${NAME}/
-	@${INSTALL_DATA} ${WRKSRC}/AUTHORS ${DATADIR}/gdesklets/Displays/${NAME}/
-	@${INSTALL_DATA} ${WRKSRC}/ChangeLog ${DATADIR}/gdesklets/Displays/${NAME}/
 	@${INSTALL_DATA} ${WRKSRC}/gfx/*.png ${DATADIR}/gdesklets/Displays/${NAME}/gfx/
 	@${INSTALL_DATA} ${WRKSRC}/${NAME}/__init__.py ${DATADIR}/gdesklets/Sensors/${NAME}
-	@${INSTALL_DATA} ${WRKSRC}/${NAME}/gfx/*.png ${DATADIR}/gdesklets/Sensors/${NAME}/gfx/
 .for ii in ${LANG}
 	@${MKDIR} ${DATADIR}/gdesklets/Sensors/${NAME}/locale/${ii}/LC_MESSAGES
 	@${INSTALL_DATA} ${WRKSRC}/${NAME}/locale/${ii}/LC_MESSAGES/gdesklets.mo \
@@ -47,6 +45,8 @@ do-install:
 .endfor
 
 post-install:
+	@${PYTHON_CMD} ${PYTHON_LIBDIR}/compileall.py ${DATADIR}/gdesklets/Sensors/${NAME}
+	@${PYTHON_CMD} -O ${PYTHON_LIBDIR}/compileall.py ${DATADIR}/gdesklets/Sensors/${NAME}
 	@${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
