--- a/net/portfwd/Makefile
+++ b/net/portfwd/Makefile
@@ -6,16 +6,17 @@
 #
 
 PORTNAME=	portfwd
-PORTVERSION=	0.26.r6
+PORTVERSION=	0.26
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
-DISTNAME=	${PORTNAME}-${PORTVERSION:S/.r/rc/}
+#DISTNAME=	${PORTNAME}-${PORTVERSION:S/.r/rc/}
 
 MAINTAINER=	sysadmin@alexdupre.com
 COMMENT=	A Port Forwarding Daemon
 
 GNU_CONFIGURE=	yes
+CONFIGURE_TARGET=	--build=${MACHINE_ARCH}-portbld-freebsd${OSREL}
 USE_GMAKE=	yes
 USE_REINPLACE=	yes
 
@@ -23,11 +24,11 @@ MAN5=	portfwd.cfg.5
 MAN8=	portfwd.8
 
 .if defined(NOPORTDOCS)
-pre-install:
-	@${REINPLACE_CMD} -e "s|(^install-data-am:) install-docDATA|\1|g" \
+post-configure:
+	@${REINPLACE_CMD} -e "s|\(^install-data-am:\) install-docDATA|\1|g" \
 		${WRKSRC}/Makefile
 	@${REINPLACE_CMD} -e \
-		"s|(^install-data-am: install-man) install-docDATA|\1|g" \
+		"s|\(^install-data-am: install-man\) install-docDATA|\1|g" \
 		${WRKSRC}/doc/Makefile
 .endif
 
