--- a/x11-toolkits/guile-gtk/Makefile
+++ b/x11-toolkits/guile-gtk/Makefile
@@ -8,8 +8,10 @@
 PORTNAME=	guile-gtk
 PORTVERSION=	0.31
 CATEGORIES=	x11-toolkits scheme
-MASTER_SITES=	${MASTER_SITE_SAVANNAH}
-MASTER_SITE_SUBDIR=	${PORTNAME}
+#MASTER_SITES=	${MASTER_SITE_SAVANNAH}
+#MASTER_SITE_SUBDIR=	${PORTNAME}
+MASTER_SITES=	${MASTER_SITE_LOCAL}
+MASTER_SITE_SUBDIR=	adamw
 DISTNAME=	${PORTNAME}-1.2-${PORTVERSION}
 
 MAINTAINER=	gnome@FreeBSD.org
